force-app/main/default/objects/Drivers__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Driver is active to assign in transactions.</description>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>