force-app/main/default/objects/Drivers__c/fields/Driver_License_Class__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Class__c</fullName>
    <label>DL Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>