force-app/main/default/objects/Drivers__c/fields/Driver_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Number__c</fullName>
    <label>Driver License Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>