force-app/main/default/objects/Drivers__c/fields/License_Expired__c.field-meta.xml
<CustomField>
    <fullName>License_Expired__c</fullName>
    <formula>Expiration_Date__c &lt; today()</formula>
    <label>License Expired ?</label>
    <type>Checkbox</type>
</CustomField>