force-app/main/default/objects/Drivers__c/fields/Notified_Before_N2_Days_License_Expire__c.field-meta.xml
<CustomField>
    <fullName>Notified_Before_N2_Days_License_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified Before N2 Days License Expire</label>
    <type>Checkbox</type>
</CustomField>