force-app/main/default/objects/Drivers__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Salesforce login user.</inlineHelpText>
    <label>Related User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Active and Salesforce user can be selected.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>