force-app/main/default/objects/Drivers__c/fields/Shift_End_time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_time__c</fullName>
    <label>Shift End time</label>
    <type>Time</type>
</CustomField>