force-app/main/default/objects/Drivers__c/fields/Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start_Time__c</fullName>
    <label>Shift Start Time</label>
    <type>Time</type>
</CustomField>