force-app/main/default/objects/Drivers__c/listViews/All_Drivers.listView-meta.xml
<ListView>
    <fullName>All_Drivers</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Related_User__c</columns>
    <columns>Driver_License_Class__c</columns>
    <columns>Driver_License_Number__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>State_Issued__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Drivers</label>
</ListView>