force-app/main/default/objects/Drivers__c/listViews/Driver_Bench.listView-meta.xml
<ListView>
    <fullName>Driver_Bench</fullName>
    <columns>NAME</columns>
    <columns>Driver_License_Number__c</columns>
    <columns>State_Issued__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Driver Bench</label>
</ListView>